# inventory-coop

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  app.py  docker-compose.yaml  docker-compose.yaml.dev  docker-compose.yaml.prod  fake_counts.py  main.py  package-lock.json  pyproject.toml  requirements.txt  settings.py  uwsgi.ini
api/: login.py  odoo.py  settings.py
client/: .babelrc  .gitignore  README.md  docker-compose.yaml  index.html  package-lock.json  package.json
client/config/: dev.env.js  prod.env.js
client/public/: index.html
client/src/: App.vue  main.js
client/src/components/: Inventories.vue  Inventory.vue  Login.vue
client/src/mixin/: authHeader.js  cookie.js  url.js
client/src/plugins/: vuetify.js
client/src/router/: index.js
client/src/store/: api.js  authentication.js  counts.js  index.js  inventories.js
