[tool.poetry]
name = "inventory-coop"
version = "0.1.0"
description = "Backend for inventory process in La Chouette Coop"
authors = ["Vincent Bisserie <vbisserie@gmail.com>"]
packages = [
    { include = "main.py" },
    { include = "api" },
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
eve = "^1.1.5"
pymongo = "^3.12.3"
pyjwt = "^2.3.0"
python-ldap = "^3.3.1"
Werkzeug = "^0.16.1"
aio-odoorpc-base = "^3.0.4"
httpx = "^0.22.0"
flask-socketio = "v4.3.2"
itsdangerous= "2.0.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[tool.poetry.scripts]
inventory-coop = 'main:main'

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
