[tool.poetry]
name = "inventory-coop"
version = "0.1.0"
description = "Backend for inventory process in La Chouette Coop"
authors = ["Vincent Bisserie <vbisserie@gmail.com>"]
packages = [
    { include = "main.py" },
    { include = "api" },
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
eve = "*"
pymongo = "*"
pyjwt = "*"
python-ldap = "*"
Flask = "*"
flask-socketio = "*"
itsdangerous = "*"
requests = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.9.3"

[tool.poetry.scripts]
inventory-coop = 'main:main'

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
