[tool.poetry]
name = "inventory-coop"
version = "0.1.0"
description = "Backend for inventory process in La Chouette Coop"
authors = ["Vincent Bisserie <vbisserie@gmail.com>"]
packages = [
    { include = "main.py" },
    { include = "api" },
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
eve = "^2.1.0"
pymongo = "^4.6.0"
pyjwt = "^2.8.0"
python-ldap = "^3.4.3"
Flask = "^1.1.4"
itsdangerous = "^1.1.0"
requests = "^2.31.0"
markupsafe = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.9.3"

[tool.poetry.scripts]
inventory-coop = 'main:main'

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
